--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                                             </figure>
                                             <div class="caption-title">
                                                 <h3><a href="#">Alist网盘挂载项目</a></h3>
-                                                <span>Branding, Print</span>
+                                                <span>使用了Alist 和raidrive</span>
                                             </div>
                                         </div>
                                     </div>
@@ -322,8 +322,8 @@
                                                 </div>
                                             </figure>
                                             <div class="caption-title">
-                                                <h3><a href="#">Portfolio Item Title</a></h3>
-                                                <span>Branding, Print</span>
+                                                <h3><a href="#">ChatGPT取API为QQ机器人项目</a></h3>
+                                                <span></span>
                                             </div>
                                         </div>
                                     </div>
