--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                                         <div class="inner-box">
                                             <div class="icon-box"><span class="icon flaticon-pen-tool"></span></div>
                                             <h4><a href="blog-single.html">打印服务</a></h4>
-                                            <div class="text">我可以向身边的人无偿提供少数量的打印服务，规格为A4 B5 以及小照片尺寸 </div>
+                                            <div class="text">我可以向身边的人有偿提供少数量的打印服务，规格为A4 B5 以及小照片尺寸 </div>
                                         </div> 
                                     </div>
                                     <div class="services-block col-md-6">
@@ -282,7 +282,7 @@
                                         <div class="inner-box">
                                             <div class="icon-box"><span class="icon flaticon-layers-1"></span></div>
                                             <h4><a href="blog-single.html">政治生活</a></h4>
-                                            <div class="text">我可以和你面对面或者使用TG交谈政治内容，使得自己的政治思想更加正确，同时我们必须坚持坚定共产主义信念不动摇的原则进行</div>
+                                            <div class="text">我可以和你面对面或者使用TG交谈政治内容，同时我们必须坚持坚定共产主义信念不动摇的原则进行</div>
                                         </div> 
                                     
                                     </div>
