--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                                         <div class="inner-box">
                                             <div class="icon-box"><span class="icon flaticon-layers-1"></span></div>
                                             <h4><a href="blog-single.html">政治生活</a></h4>
-                                            <div class="text">我可以和你面对面或者使用TG交谈政治内容，同时我们必须坚持坚定共产主义信念不动摇的原则进行</div>
+                                            <div class="text">我可以和你面对面或者使用TG交谈政治内容，让我们一起探讨邪恶的资本主义的坏处以及深入研究伟大的共产主义，真正成为共产主义的坚定维护者！！！做一名自豪的中国人！！！</div>
                                         </div> 
                                     
                                     </div>
