--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
                             <a href="https://www.ixigua.com/home/896794199615325?list_entrance=homepage" class="theme-btn btn-style-one">联系我</a>
                         </div>
                         <ul class="social-icon-two">
-                            <li><a href="https://www.facebook.com/oceanLiangCN"><span class="fa fa-facebook"></span></a></li>
-                            <li><a href="https://twitter.com/LiangOcean"><span class="fa fa-twitter"></span></a></li>
+                            <li><a href="https://t.me/+n6hc3chYCGQ2MjVl"><img src="images/tg2.png" alt=""></span></a></li>
+                            <li><a href="https://twitter.com/LiangOcean"><img src="images/xigua.png" alt=""></span></a></li>
                             <li><a href="https://mail.google.com/chat/u/0/#chat/dm/0DOV4kAAAAE"><span class="fa fa-google-plus"></span></a></li>
                         </ul>
                     </div>
@@ -131,8 +131,8 @@
                                     <a href="images/WeChat.png" class="theme-btn btn-style-two">Buy me coffee</a>
                                 </div>
                                 <ul class="social-icon-two">
-                                    <li><a href="https://www.facebook.com/oceanLiangCN"><span class="fa fa-facebook"></span></a></li>
-                                    <li><a href="https://twitter.com/LiangOcean"><span class="fa fa-twitter"></span></a></li>
+                                    <li><a href="https://t.me/+n6hc3chYCGQ2MjVl"><img src="images/tg2.png" alt=""></span></a></li>
+                                    <li><a href="https://twitter.com/LiangOcean"><img src="images/xigua.png" alt=""></span></a></li>
                                     <li><a href="https://mail.google.com/chat/u/0/#chat/dm/0DOV4kAAAAE"><span class="fa fa-google-plus"></span></a></li>
                                 </ul>
                             </div>
@@ -461,7 +461,7 @@
                                 <div class="row clearfix">
                                     <div class="col-md-6">
                                         <ul class="list-style-two">
-                                            <li><span class="icon flaticon-signs"></span>PO Box None <br> 广东省茂名市高州市632县道金山街道中心小学东北100米 </li>
+                                            <li><span class="icon flaticon-signs"></span>您可以通过邮箱或者google chat来联系我<br> </li>
                                             <li><span class="icon flaticon-smartphone"></span>(+86) 198-765-058-21 <br>(+86) 135-390-153-39</li>
                                             <li><span class="icon flaticon-note-1"></span>oceanLiangCN@gmail.com <br>oceanLiangCN@outlook.com</li>
                                         </ul>
