--- a/blog-single.html
+++ b/blog-single.html
@@ -91,7 +91,7 @@
                         </div>
                         <ul class="social-icon-two">
                             <li><a href="https://t.me/+n6hc3chYCGQ2MjVl"><img src="images/tg2.png" alt=""></span></a></li>
-                            <li><a href="https://twitter.com/LiangOcean"><img src="images/xigua.png" alt=""></span></a></li>
+                            <li><a href="https://www.ixigua.com/home/896794199615325?list_entrance=homepage"><img src="images/xigua.png" alt=""></span></a></li>
                             <li><a href="https://mail.google.com/chat/u/0/#chat/dm/0DOV4kAAAAE"><span class="fa fa-google-plus"></span></a></li>
                             
                         </ul>
