--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                                         <div class="col-md-6">
                                             <ul class="list-style-one">
                                                 <li><strong>Email:</strong>  oceanLiangCN@gmail.com</li>
-                                                <li><strong>Freelance:</strong>  Available</li>
+                                                <li><strong>哦，别忘了性别:</strong>  boy</li>
                                             </ul>
                                         </div>
                                     </div>
