--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                                         <span class="typed-title"></span>
                                     </div>
                                 </div>
-                                <div class="text">Hello, I am I am an information technology enthusiast, and I am taking my spare time to continuously learn various programming languages.（本网站的许多功能均需要梯子)</div>
+                                <div class="text">欢迎来到我的博客网站，在这里，您可以了解我，并获得一定的帮助，同时我们也可以互相讨论，共同进步！！！（本网站的许多功能均需要梯子，打不开的说明在外网，不要傻傻地没有梯子就一直尝试打开，需要梯子的可以向下看‘梯子’模块)</div>
                                 <div class="link-btn">
                                     <a href="blog-single.html" class="theme-btn btn-style-one">My blog</a>
                                     <a href="images/WeChat.png" class="theme-btn btn-style-two">Buy me coffee</a>
