--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                                         <span class="typed-title"></span>
                                     </div>
                                 </div>
-                                <div class="text">欢迎来到我的博客网站，在这里，您可以了解我，并获得一定的帮助，同时我们也可以互相讨论，共同进步！！！（本网站的许多功能均需要梯子，不要傻傻地没有梯子就一直尝试打开，需要梯子的可以向下看‘梯子’模块)</div>
+                                <div class="text">欢迎来到我的博客网站，在这里，您可以了解我，并获得一定的帮助，同时我们也可以互相讨论，共同进步！！！<br>（本网站的许多功能均需要梯子，不要傻傻地没有梯子就一直尝试打开，需要梯子的可以向下看‘梯子’模块)</div>
                                 <div class="link-btn">
                                     <a href="blog-single.html" class="theme-btn btn-style-one">My blog</a>
                                     <a href="images/WeChat.png" class="theme-btn btn-style-two">Buy me coffee</a>
@@ -307,7 +307,7 @@
                                      <h4 class="">  4.您可以去github上搜索'翻墙','梯子'等字样进行查找（如果您实在找不到的话，可以通过邮箱联系我）</h4>
                                      <h4 class="">  5.如果您具有去外网的能力后，请下载并注册一个TG（电报）的账号，然后加入这个博客群，其中有高质量的无偿梯子（请点击下面的网址）</h4>
                                      <li><a href="https://t.me/+n6hc3chYCGQ2MjVl">https://t.me/+n6hc3chYCGQ2MjVl</a></li>
-                                     <h4 class=""> <font  color="orange"> Attention:首页的那个支付码是对我博客网站的捐赠，对我项目的肯定而不是你们支付梯子的费用，你们在我这的所有梯子都是免费的都是无偿的，如果有商家在淘宝或者其他地方售卖我这个网站的地址请及时举报，这里的所有梯子服务都是免费，而且处于安全考虑，我并不会在这个网站直接给你梯子，而是要等你们先找到一个梯子之后，到我的TG群领取更加好用的免费梯子，所以很抱歉，不能当你们的第一个引路人，但是Github上有很多梯子分享，但是不怎么好，所以我这个就是弥补这个缺点的，毕竟我也是这么走来的，请下载并注册一个TG（电报）的账号，然后加入这个博客群，其中有高质量的无偿梯子（请点击下面的网址）</font></h4>
+                                     <h4 class=""> <font  color="orange"> Attention:首页的那个支付码是对我博客网站的捐赠，对我项目的肯定而不是你们支付梯子的费用，你们在我这的所有梯子都是免费的都是无偿的，如果有商家在淘宝或者其他地方售卖我这个网站的地址请及时举报，这里的所有梯子服务都是免费，而且处于安全考虑，我并不会在这个网站直接给你梯子，而是要等你们先找到一个梯子之后，到我的TG群领取更加好用的免费梯子，所以很抱歉，不能当你们的第一个引路人，但是Github上有很多梯子分享，但是不怎么好，所以我这个就是弥补这个缺点的，毕竟我也是这么走来的，请下载并注册一个TG（电报）的账号，然后加入这个博客群，其中有高质量的无偿梯子（请点击上面的网址）</font></h4>
                                     
                                 </div>
                             </div>
