--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                                      <h4 class=""> <font size="3" color="red">3.所以如果您先翻墙，请您先确认可以承担以上后果，本站为了安全并不能直接无偿提供梯子，所以您只能先从其他地方获得梯子，之后，才能加入我的博客群，获得高质量的免费的梯子（别问为什么免费，因为谁敢收费）</font></h4></h4>
                                      <h4 class="">  4.您可以去github上搜索'翻墙','梯子'等字样进行查找（如果您实在找不到的话，可以通过邮箱联系我）</h4>
                                      <h4 class="">  5.如果您具有去外网的能力后，请下载并注册一个TG（电报）的账号，然后加入这个博客群，其中有高质量的无偿梯子（请点击下面的网址）</h4>
-                                     <li><a href="https://t.me/+n6hc3chYCGQ2MjVl">https://t.me/+n6hc3chYCGQ2MjVl</a></li>
+                                     <li><a href="https://t.me/+n6hc3chYCGQ2MjVl">https://t.me/+n6hc3chYCGQ2MjVl</a>    （要梯子！！！）</li>
                                      <h4 class=""> <font  color="orange"> Attention:首页的那个支付码是对我博客网站的捐赠，对我项目的肯定而不是你们支付梯子的费用，你们在我这的所有梯子都是免费的都是无偿的，如果有商家在淘宝或者其他地方售卖我这个网站的地址请及时举报，这里的所有梯子服务都是免费，而且处于安全考虑，我并不会在这个网站直接给你梯子，而是要等你们先找到一个梯子之后，到我的TG群领取更加好用的免费梯子，所以很抱歉，不能当你们的第一个引路人，但是Github上有很多梯子分享，但是不怎么好，所以我这个就是弥补这个缺点的，毕竟我也是这么走来的，请下载并注册一个TG（电报）的账号，然后加入这个博客群，其中有高质量的无偿梯子（请点击上面的网址）</font></h4>
                                     
                                 </div>
