--- a/index.html
+++ b/index.html
@@ -132,9 +132,10 @@
                                     </div>
                                 </div>
                                 <div class="text">欢迎来到我的博客网站，在这里，您可以了解我，并获得一定的帮助，同时我们也可以互相讨论，共同进步！！！<br>（本网站的许多功能均需要梯子，不要傻傻地没有梯子就一直尝试打开，需要梯子的可以向下看‘梯子’模块)</div>
+                                <div class="text"><h7><font color='grey' size=2>>>手机版访客请向下拉更多精彩内容在下面<< </font></h4></div>
                                 <div class="link-btn">
-                                    <a href="blog-single.html" class="theme-btn btn-style-one">My blog</a>
-                                    <a href="images/WeChat.png" class="theme-btn btn-style-two">Buy me coffee</a>
+                                    <a href="blog-single.html" class="theme-btn btn-style-one">我的博客</a>
+                                    <a href="images/WeChat.png" class="theme-btn btn-style-two">捐赠我</a>
                                 </div>
                                 <ul class="social-icon-two">
                                     <li><a href="https://t.me/+n6hc3chYCGQ2MjVl"><img src="images/tg2.png" alt=""></span></a></li>
@@ -274,7 +275,7 @@
                                         <div class="inner-box">
                                             <div class="icon-box"><span class="icon flaticon-folder"></span></div>
                                             <h4><a href="https://t.me/+n6hc3chYCGQ2MjVl">寻找资源服务</a></h4>
-                                            <div class="text">我可以无偿为大家提供各种资源（非黄色）如：电影，音乐等等，我拥有许多TG搜索机器人，资源非常多</div>
+                                            <div class="text">我可以无偿为大家提供各种资源（非黄色，政治，暴力）如：电影，音乐等等，我拥有许多TG搜索机器人，资源非常多</div>
                                         </div> 
                                     </div>
                                     <div class="services-block col-md-6">
@@ -317,6 +318,7 @@
                         <div class="card-blog card-item" id="blog" style="background-image:url(images/background/2.jpg)">
                             <div class="card-inner">
                                 <h4 class="title">Blog</h4>
+                                <a1>>>点击图片进入<<</a1>
                                 <div class="news-block">
                                     <div class="inner-box">
                                         <div class="image">
@@ -335,6 +337,7 @@
                                     </div>
                                 </div>
                                 <h4 class="title">Blog</h4>
+                                <a1>>>点击图片进入<<</a1>
                                 <div class="news-block">
                                     <div class="inner-box">
                                         <div class="image">
