--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                                  <li><a href="#about"><i class="flaticon-social"></i>关于</a></li>
                                  <li><a href="#services"><i class="flaticon-layers-1"></i>服务</a></li>
                                  <li><a href="#work"><i class="flaticon-tools"></i>梯子</a></li>
-                                 <li><a href="#resume"><i class="flaticon-curriculum"></i>资源</a></li>
+                                 <li><a href="#resume"><i class="flaticon-curriculum"></i>教程</a></li>
                                  <li><a href="#blog"><i class="flaticon-blog"></i>博客</a></li>
                                  <li><a href="#contact"><i class="flaticon-send-mail"></i>联系</a></li>
                                  
