--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
                                     <div class="col-md-6">
                                         <ul class="list-style-two">
                                             <li><span class="icon flaticon-signs"></span>您可以通过邮箱或者google chat来联系我<br> </li>
-                                            <li><span class="icon flaticon-smartphone"></span>(+86) 198-765-058-21 <br>(+86) 135-390-153-39</li>
+                                            <li><span class="icon flaticon-smartphone"></span>(+86) 198-765-058-21 
                                             <li><span class="icon flaticon-note-1"></span>oceanLiangCN@gmail.com <br>oceanLiangCN@outlook.com</li>
                                             <h4><font color='orange'>另外，所有的敏感信息我都不会在邮箱，本网站或者google chat中理会，所有的这些信息都只能在TG中交流，别问为什么，问就是TG是目前的'法外之地'，没有什么政府，组织能证明当时做什么的是谁，那个用户是谁。因为TG不向任何国家和政府妥协，因此他不得搬出了俄罗斯，所以转移到这个地方也是为了大家的安全着想，虽然梯子这个东西就算告诉别人也没事，普遍违法，法不责众，但是还是安全起见（想进入TG群的必须要有梯子先</font><font color='red'>另外，本网站不是政治网站，本网站仅限于科技领域，本网站及其附属群组等公共领域一律不得讨论一切政治不正确的问题，违者后果自<a href=images/key.zip>负</a></font></h4>
 
